added remaining tests